2012-02-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/random.c (random_stir):
	  Replaced calls to random_add() with _random_add().

	* src/munged/random.c (random_fini): Stir the entropy pool before
	  writing out the seed file.

	* src/munged/random.h, src/munged/random.c (random_stir): Added.
	* src/munged/random.c (random_init): Replaced code to stir the entropy
	  pool with random_stir().

	* config/x_ac_expand_install_dirs.m4:
	  Changed _X_AC_EXPAND_INSTALL_DIRS_EVAL to loop over the eval
	  expansion in order to handle increased levels of indirection.

2012-02-22  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_expand_install_dirs.m4:
	  Created _X_AC_EXPAND_INSTALL_DIRS_EVAL.

	* : Updated copyright date range.

	* src/munged/random.c (random_init): Stir the entropy pool with the
	  current time.

2012-02-21  Chris Dunlap  <cdunlap@llnl.gov>

	* configure, config/x_ac_arch.m4: Applied patches from asau@netbsd.org
	  to fix calls to test for string equality on NetBSD.  (issue 12)

2011-02-27  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Updated AUTH_METHOD_GETPEEREID
	  comment for OpenBSD.

2011-02-25  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.10.

	* HISTORY, META, NEWS, PLATFORMS, munge.spec:
	  Updated for 0.5.10 release.

	* src/libcommon/fd.c (fd_timed_write_iov):
	  Fixed "assignment type mismatch" compiler warning on Solaris when
	  assigning an unsigned value to the signed struct iovec iov_base ptr.
	* src/libcommon/m_msg.c (m_msg_send): 
	  Fixed "assignment type mismatch" compiler warning on Solaris when
	  assigning an unsigned value to the signed struct iovec iov_base ptr.

2011-02-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.h: Added <sys/time.h> include for struct timeval
	  on AIX.

	* src/munged/xgetgrent.c (_xgetgrent_get_buf_size):
	  Replaced DEFAULT_GR_BUF_SIZE with MINIMUM_GR_BUF_SIZE.
	* src/munged/xgetpwnam.c (_xgetpwnam_get_buf_size):