@@ -211,5 +211,15 @@
  */
 #define RANDOM_SEED_DEFAULT             "/dev/urandom"
 
+/*  Integer for the maximum number of seconds between stirrings of the PRNG
+ *    entropy pool once the exponential backoff completes.
+ */
+#define RANDOM_SEED_STIR_MAX_SECS       14400
+
+/*  Integer for the minimum number of seconds between stirrings of the PRNG
+ *    entropy pool from which the exponential backoff starts.
+ */
+#define RANDOM_SEED_STIR_MIN_SECS       1
+
 
 #endif /* !MUNGE_DEFS_H */
